@@ -136,5 +136,6 @@ install: all
 	copy *.dll $(INSTDIR)\bin
 	copy *.lib $(INSTDIR)\lib
 	copy proj_api.h $(INSTDIR)\include
+	copy projects.h $(INSTDIR)\include
 	copy geodesic.h $(INSTDIR)\include
 	
